--- a/Todo.ipynb
+++ b/Todo.ipynb
@@ -50,7 +50,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# lags = range(1,3)\n",
+    "# lol = range(1,3)\n",
+    "# for i,j in product(lags,lol):\n",
+    "#     print(i,j)\n",
+    "\n",
+    "lags = range(0,4)\n",
+    "\n",
+    "for lag in lags:\n",
+    "    print(lag)"
+   ]
   }
  ],
  "metadata": {
