--- a/Clustering_PartB/clustering.ipynb
+++ b/Clustering_PartB/clustering.ipynb
@@ -328,11 +328,47 @@
     "cluster = pd.read_csv('Company_Employee.csv')\n",
     "cluster"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1470 entries, 0 to 1469\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column                                          Non-Null Count  Dtype \n",
+      "---  ------                                          --------------  ----- \n",
+      " 0   Age                                             1470 non-null   int64 \n",
+      " 1   Gender                                          1470 non-null   object\n",
+      " 2   BusinessTravel                                  1470 non-null   object\n",
+      " 3   Job Function                                    1470 non-null   object\n",
+      " 4   Distance Between Company and Home (KM)          1470 non-null   int64 \n",
+      " 5   Education (1 is lowest, 5 is highest)           1470 non-null   int64 \n",
+      " 6   Job Satisfaction (1 is lowest, 4 is highest)    1470 non-null   int64 \n",
+      " 7   MaritalStatus                                   1470 non-null   object\n",
+      " 8   Salary ($)                                      1470 non-null   int64 \n",
+      " 9   Performance Rating (1 is lowest, 4 is highest)  1470 non-null   int64 \n",
+      " 10  Work Life Balance (1 is worst, 4 is best)       1470 non-null   int64 \n",
+      " 11  Length of Service (Years)                       1470 non-null   int64 \n",
+      " 12  Resign Status                                   1470 non-null   object\n",
+      "dtypes: int64(8), object(5)\n",
+      "memory usage: 149.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "cluster.info()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit (windows store)",
+   "display_name": "Python 3.10.6 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -346,12 +382,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "3a00f272cf4b6b21534f4cce92f165e847380034a1edd2638bef2aea3f81e5c3"
+    "hash": "58dbfdb34cf82127b32c5737e6183911655ff227e5c11e8f5e4b25048ae98ef2"
    }
   }
  },
